--- a/shoppingcart/src/components/Item.css
+++ b/shoppingcart/src/components/Item.css
@@ -1,7 +1,7 @@
 .cards {
-    background: #73001d;
+    background: #fafafa;
     display: inline-block;
-    /* width: 20%; */
+    width: 20%;
     padding: 5px;
     margin-left: 2%;
     margin-right: 2%;
