--- a/shoppingcart/src/components/Home.css
+++ b/shoppingcart/src/components/Home.css
@@ -77,7 +77,7 @@ input {
   border-bottom: 1px solid #757575;
 }
 .cards {
-  background: #73001d;
+  background: #fafafa;
   display: inline-block;
   /* width: 20%; */
   padding: 5px;
