--- a/shoppingcart/src/components/ProductList.css
+++ b/shoppingcart/src/components/ProductList.css
@@ -14,22 +14,50 @@
     display: inline-block;
     padding: 12px 24px;
     margin: .3em 0 1em 0;
-    width: 100%;
+    /* width: 80%; */
     vertical-align: middle;
-    color: #fff;
+    color: black;
     font-size: 12px;
     line-height: 20px;
-    -webkit-font-smoothing: antialiased;
-    text-align: center;
+    
+    text-align: left;
     letter-spacing: 1px;
-    background: transparent;
+    background: 448AFF;
     border: 0;
     border-bottom: 2px solid #3160B6;
     cursor: pointer;
     transition: all 0.15s ease;
+    text-shadow: 1px 1px 0 rgba(39, 110, 204, .5);
 }
 
 .buttonBlue {
     background: #4a89dc;
     text-shadow: 1px 1px 0 rgba(39, 110, 204, .5);
+  }
+
+  .subtotal {
+    display: inline-block;
+	width: 30%;
+	min-width: 20%;
+	/* // height: 330px;
+	// border: 1px solid transparentize(grey,0.7); */
+	box-sizing: border-box;
+	box-shadow: 2px 2px 25px 0px transparentize(black,0.3);
+	border-radius: 3px;
+	margin: 1em 1.5%;
+	animation: scl 0.5s ease-in-out;
+	/* transform-origin: left center; */
+    background-color: #fff;
+    text-align: right;
+    float: right;
+  }
+
+  .checkout {
+    font-size: 1rem;
+    padding: 5px 13px;
+    font-family: "Roboto", sans-serif;
+    position: relative;
+    color: #fff;
+    background: #448AFF;
+    margin-bottom: 4%;
   }
