--- a/shoppingcart/src/components/CheckoutList.css
+++ b/shoppingcart/src/components/CheckoutList.css
@@ -5,12 +5,12 @@
   display: inline-flex;
 }
 .itemCard {
-  width: 35%;
+  width: 45%;
   margin-left: 32.5%;
   border: 1px solid red;
 }
 .itemName {
-  width: 20%;
+  width: 35%;
   /* border: 1px solid black; */
 
   display: inline-flex;
@@ -42,8 +42,8 @@
 }
 .itemPrice {
   width: 10%;
-  margin-left: 9%;
-  margin-right: 9%;
+  margin-left: 4%;
+  /* margin-right: 7%; */
   display: inline-flex;
   font-weight: bold;
 }
