--- a/shoppingcart/src/lib/withAuth.css
+++ b/shoppingcart/src/lib/withAuth.css
@@ -12,3 +12,13 @@
   background-color: black;
   color: white;
 }
+
+.navigate {
+  width: 10%;
+  height: 2em;
+  margin-left: 80%;
+  margin-top: 2em;
+  color: beige;
+  font-weight: bold;
+  background-color: blue;
+}
