--- a/shoppingcart/src/components/CheckoutList.css
+++ b/shoppingcart/src/components/CheckoutList.css
@@ -6,23 +6,25 @@
 }
 .itemCard {
   width: 45%;
-  margin-left: 32.5%;
-  border: 1px solid red;
+  /* margin-left: 32.5%; */
+  /* border: 1px solid red; */
+  margin: 0.4em auto;
 }
 .itemName {
   width: 35%;
   /* border: 1px solid black; */
 
   display: inline-flex;
-  margin-left: 5%;
-  margin-right: 5%;
-  color: blue;
-  font-weight: bold;
+  /* margin-left: 5%;
+  margin-right: 5%; */
+  /* color: blue; */
+  /* font-weight: bold; */
+  margin: 0.4em auto;
 }
 .changeQuantity {
-  width: 40%;
+  width: 30%;
   align-self: center;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
 
   display: inline-flex;
 }
@@ -33,17 +35,36 @@
 .inputPrice {
   width: 50%;
   /* border: 3px solid green; */
+  transform: scale(0.55);
 }
 .addItem {
   width: 100%;
+  transform: scale(0.75);
 }
 .subtractItem {
   width: 100%;
+  transform: scale(0.75);
 }
 .itemPrice {
   width: 10%;
   margin-left: 4%;
   /* margin-right: 7%; */
   display: inline-flex;
-  font-weight: bold;
+  /* font-weight: bold; */
+}
+
+.sendOrder {
+ float: right;
+ margin-right: 10%;
+ margin-top: 2%;
+ margin-bottom: 2%;
+}
+
+.checkoutElements {
+  align-content: center;
+  background: white;
+  max-width: 80%;
+  /* margin-top: 5%; */
+  margin: 4em auto;
+  transform: scale(0.75);
 }
