Added starting setttup to start styling

--- a/shoppingcart/src/lib/withAuth.css
+++ b/shoppingcart/src/lib/withAuth.css
@@ -8,18 +8,17 @@
 .Logout {
   width: 10%;
   height: 2em;
-  /* margin-left: 80%; */
+  margin-left: 90%;
   background-color: black;
   color: white;
   /* float: right; */
   transform: scale(0.75);
-  
 }
 
 .navigate {
   width: 10%;
   height: 2em;
-  /* margin-left: 80%; */
+  margin-left: 80%;
   margin-top: 2em;
   color: beige;
   font-weight: bold;
@@ -29,6 +28,5 @@
 }
 
 /* .parent {
-  display: flex;
+  display: inline-flex;
 } */
-
