--- a/shoppingcart/src/components/ListProducts.css
+++ b/shoppingcart/src/components/ListProducts.css
@@ -54,3 +54,20 @@
 .cards {
   /* border: 10px solid transparentize(black,0.7); */
 }
+
+.list-cards {
+  width: 100%;
+  display: inline-flex;
+  /* border: 2px solid red; */
+  align-content: space-around;
+  align-items: flex-end;
+}
+
+.card-item {
+  /* margin-right: 5%;
+  margin-left: 5%; */
+  /* width: 25%; */
+  margin: auto;
+  border: 2px solid black;
+  background-color: white;
+}
