--- a/shoppingcart/src/components/OrderDetails.css
+++ b/shoppingcart/src/components/OrderDetails.css
@@ -1,4 +1,9 @@
-.order-details {
+.order-details-content {
   color: red;
-  border: 2px solid black;
+  border: 2px solid orange;
+  /* background: #eeeeee; */
+  text-align: center;
+  width: 50%;
+  margin-left: 25%;
+  background-color: aliceblue;
 }
