--- a/shoppingcart/src/components/ListProducts.css
+++ b/shoppingcart/src/components/ListProducts.css
@@ -55,6 +55,16 @@
   /* display: inline-block; */
   width: 100%;
   box-sizing: border-box;
+  height: 100%;
+  height: 12em;
+  text-align: left;
+  padding-left: 20;
+  border: 2px solid red;
+}
+.wrapp-product-buttons {
+  box-sizing: border-box;
+  height: 50%;
+  margin-top: 50%;
 }
 
 .form-group {
@@ -70,6 +80,6 @@
 .card-item {
   /* border: 2px solid blue; */
   width: 15%;
-
+  border: 2px solid lemonchiffon;
   background-color: #eeeeee;
 }
